codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

  Type to filter models
› test-visible-model (current)  test-visible-model description
  Enter model ID (⌥ + i)                Use a model that is not shown here

  Press enter to confirm or esc to go back
