codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

  Type to filter models
› gpt-5.5 (default)  Frontier model for complex coding, research, and real-
                     world work.
  gpt-5.4            Strong model for everyday coding.
  gpt-5.4-mini       Small, fast, and cost-efficient model for simpler coding
                     tasks.
  gpt-5.3-codex      Coding-optimized model.
  gpt-5.2 (current)  Optimized for professional work and long-running agents.
  Enter model ID (⌥ + i)     Use a model that is not shown here

  Press enter to confirm or esc to go back
