codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_subagent_spawn_composer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Starting subagent...                                                          "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                          v111  "
