codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__redraw_full_scrollback_footer_flash.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Redrew full scrollback.                                                 vNN  "
