codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__redraw_full_scrollback_footer_flash_while_working.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Redrew full scrollback.                                                 vNN  "
