codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_snippets_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1449
expression: popup
---
┌─────────────────────────┐
│ cargo test -p codex-tui │
│ tui/src/keymap.rs       │
└─────────────────────────┘
