codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__startup_without_transient_session_header_table.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                          vNN  "
